0.213 2023-05-17
  [Imcompatible Changes]
    * stream field in IO::File is renamed to FileStream.
    * input_file_nubmer field in IO::File is renamed to InputLineNumber.
0.212 2023-05-17
  [Buf Fix]
    * Fix the bug that IO::Socket::INET uses IPv6 addrinfo.
  [New Features]
    * Add the IO::Socket::INET6 class.
  [Imcompatible Changes]
    * The default value of Listen option is changed from 5 to -1.
    * "Blocking" option is removed from IO::Socket because socket is always non-blocking to work with goroutine.
    * Remove socketpair method in IO::Socket class.
    * socket method in IO::Socket become protected, and the doc is removed.
    * connect, listen, bind, accept methods in IO::Socket become protected, and the docs are removed.
    * Remove new_from_instance from IO::Socket, IO::Socket::IP, IO::Socket::Unix.
    * fd field in IO::Handle is renamed to FD.
    * autoflush field in IO::Handle is renamed to AutoFlush.
    * Blocking field is moved from IO::Socket to IO::Handle.
    * Remove sysread and sysread method from IO::Handle and IO::Socket.
    * trancate method in IO::Handle class throws excetpion. This implementation is moved to IO::File.
    * sync method in IO::Handle class throws excetpion. This implementation is moved to IO::File.
0.211002 2023-12-07
  [Prerequirement Changes]
    * Require SPVM::Sys 0.510.
0.211001 2023-11-18
  [Internal Changes]
    * Do not use Sys->select for the future breaking backword compatible.
0.211 2023-11-18
  [Incompatible Changes]
    * The return types of the following methods becomes void.
      [IO::Handle]
        sync
        print
        printf
        say
        close
        truncate
      [IO::File]
        close
        flush
        printflush
        open
        fdopen
      [IO::Socket]
        close
        setsockopt
        connect
        listen
        bind
        shutdown
        socket
        
    * Remove the set_sockopt method from the IO::Socket class.