@@ -51,51 +51,41 @@ C<static method new_from_fd : IO::Handle ($fd : int, $open_mode : string = undef
 
 C<method input_line_number : long ();>
 
-Gets L</"input_line_number> field.
+Returns the value of L</"InputLineNumber> field.
 
 =head2 set_input_line_number
 
 C<method set_input_line_number : void ($input_line_number : long);>
 
-Sets L</"input_line_number> field.
+Sets L</"InputLineNumber> field to $input_line_number.
 
-=head2 open
+=head2 close
 
-C<method open : void ($file_name : string, $open_mode : string);>
+C<method close : void;>
 
-=head2 fdopen
+Closes the file stream L</"FileStream">, and sets L<FD|SPVM::IO::Handle/"FD"> to -1.
 
-C<method fdopen : void ($fd : int, $open_mode : string);>
+=head2 read
 
-=head2 init
+C<method read : int ($string : mutable string, $length : int = -1, $offset : int = 0);>
 
-  protected method init : void ();>
+=head2 write
 
-=head2 DESTROY
-
-C<method DESTROY : void ();>
+C<method write : int ($string : string, $length : int = -1, $offset : int = 0);>
 
 =head2 getline
 
 C<method getline : string ();>
 
+Reads a line from the file stream L</"FileStream">, incrementes the input line number L</"InputLineNumber"> by 1, and returns it.
+
 =head2 getlines
 
 C<method getlines : string ();>
 
-=head2 close
+Reads all lines from the file stream L</"FileStream">, joins them to a string, and returns it.
 
-C<method close : int ();>
-
-=head2 eof
-
-C<method eof : int ();>
-
-=head2 fileno
-
-C<method fileno : int ();>
-
-Gets the file descriptor of L</"stream"> field.
+This method calls L</"getline"> method repeatedly.
 
 =head2 getc
 
@@ -104,6 +94,10 @@ C<method getc : int ();>
 =head2 print
 
 C<method print : int ($string : string);>
+
+=head2 printflush
+
+C<method printflush : void ($string : string);>
 
 =head2 clearerr
 
@@ -121,45 +115,37 @@ C<method flush : void ();>
 
 C<method ungetc : int ($c : int);>
 
-=head2 write
+=head2 eof
 
-C<method write : int ($string : string, $length : int = -1, $offset : int = 0);>
+C<method eof : int ();>
 
-=head2 read
+If the file stream L</"FileStream"> reaches the end of file, returns 1. Otherwise, returns 0.
 
-C<method read : int ($string : mutable string, $length : int = -1, $offset : int = 0);>
-
-=head2 printflush
-
-C<method printflush : void ($string : string);>
-
-=head2 getline
-
-C<method getline : string ();>
-
-=head2 getlines
-
-C<method getlines : string ();>
-
-=head2 ungetc
-
-C<method ungetc : int ($c : int);>
-
-=head2 clearerr
-
-C<method clearerr : void ();>
+This method calls L<Sys::IO#feof|SPVM::Sys::IO/"feof"> method with the file stream L</"FileStream">.
 
 =head2 error
 
 C<method error : int ();>
 
+If the file stream L</"FileStream"> has a error status, returns 1. Otherwise, returns 0.
+
+This method calls L<Sys::IO#ferror|SPVM::Sys::IO/"ferror"> method with the file stream L</"FileStream">.
+
+=head2 clearerr
+
+C<method clearerr : void ();>
+
+Clears the error satus of the file stream L</"FileStream">.
+
+This method calls L<Sys::IO#clearerr|SPVM::Sys::IO/"clearerr"> method with the file stream L</"FileStream">.
+
 =head2 getc
 
 C<method getc : int ();>
 
-=head2 eof
+Reads a character from the file stream L</"FileStream">, and returns it.
 
-C<method eof : int ();>
+This method calls L<Sys#getc|SPVM::Sys/"getc"> method with the file stream L</"FileStream">.
 
 =head2 sync
 
@@ -167,7 +153,7 @@ C<method sync : void ();>
 
 Syncs the stream associated with the file descriptoer L<FD|SPVM::IO::Handle/"FD">.
 
-This method calls L<Sys#fsync|SPVM::Sys/"fsync"> with the file descriptor L<FD|SPVM::IO::Handle/"FD">.
+This method calls L<Sys#fsync|SPVM::Sys/"fsync"> method with the file descriptor L<FD|SPVM::IO::Handle/"FD">.
 
 =head2 truncate
 
@@ -175,7 +161,7 @@ C<method truncate : void ($legnth : long);>
 
 Trancates the stream associated with the file descriptoer L<FD|SPVM::IO::Handle/"FD">.
 
-This method calls L<Sys#ftruncate|SPVM::Sys/"ftruncate"> with the file descriptor L<FD|SPVM::IO::Handle/"FD">.
+This method calls L<Sys#ftruncate|SPVM::Sys/"ftruncate"> method with the file descriptor L<FD|SPVM::IO::Handle/"FD">.
 
 =head1 See Also
 
