@@ -15,6 +15,7 @@ class IO::File extends IO::Handle {
   
   # Class methods
   static method new : IO::File ($file_name : string = undef, $open_mode : object of string|Int = undef, $perm : int = -1) {
+    
     my $self = new IO::File;
     
     $self->init;
@@ -27,6 +28,7 @@ class IO::File extends IO::Handle {
   }
   
   static method new_from_fd : IO::Handle ($fd : int, $open_mode : string = undef) {
+    
     my $self = new IO::File;
     
     $self->init;
@@ -36,9 +38,9 @@ class IO::File extends IO::Handle {
     return $self;
   }
   
-  # Instance Methods
+  # Instance methods
   protected method init : void ($options : object[] = undef) {
-    $self->SUPER::init;
+    $self->SUPER::init($options);
   }
   
   method input_line_number : long () {
@@ -49,7 +51,154 @@ class IO::File extends IO::Handle {
     $self->{InputLineNumber} = $input_line_number ;
   }
   
-  method open : void ($file_name : string, $open_mode : object of string|Int, $perm : int = -1) {
+  method fileno : int () {
+    my $file_stream = $self->{FileStream};
+    my $fd = Sys->fileno($file_stream);
+    return $fd;
+  }
+  
+  method close : void () {
+    
+    my $file_stream = $self->{FileStream};
+    
+    Sys::IO->fclose($file_stream);
+    
+    $self->{FD} = -1;
+  }
+  
+  method getline : string () {
+    
+    my $file_stream = $self->{FileStream};
+    
+    my $line = Sys->readline($file_stream);
+    
+    if ($line) {
+      $self->{InputLineNumber}++;
+    }
+    
+    return $line;
+  }
+  
+  method read : int ($string : mutable string, $length : int = -1, $offset : int = 0) {
+    
+    my $file_stream = $self->{FileStream};
+    
+    my $read_length = Sys->read($file_stream, $string, $length, $offset);
+    
+    return $read_length;
+  }
+  
+  method write : int ($string : string, $length : int = -1, $offset : int = 0) {
+    
+    my $file_stream = $self->{FileStream};
+    
+    if ($length < 0) {
+      $length = length $string;
+    }
+    
+    my $write_length = Sys::IO->fwrite($string, 1, $length, $file_stream);
+    
+    return $write_length;
+  }
+  
+  method getlines : string () {
+    
+    my $file_stream = $self->{FileStream};
+    
+    my $string_buffer = StringBuffer->new;
+    while (1) {
+      my $line = Sys->readline($file_stream);
+      if ($line) {
+        $string_buffer->push($line);
+      }
+      else {
+        last;
+      }
+    }
+    
+    my $lines_string = $string_buffer->to_string;
+    
+    return $lines_string;
+  }
+  
+  method getc : int () {
+    
+    my $file_stream = $self->{FileStream};
+    
+    my $char = Sys->getc($file_stream);
+    
+    return $char;
+  }
+  
+  method printflush : void ($string : string) {
+    my $old_autoflush = $self->autoflush;
+    
+    # Restores the autoflush field at the end of the scope.
+    my $scope_guard = Scope::Guard->new([has handle : IO::Handle = $self, has old_autoflush : int = $old_autoflush] method : void () {
+      my $handle = $self->{handle};
+      my $old_autoflush = $self->{old_autoflush};
+      
+      $handle->set_autoflush($old_autoflush);
+    });
+    
+    $self->set_autoflush(1);
+    $self->print($string);
+  }
+  
+  method eof : int () {
+    
+    my $file_stream = $self->{FileStream};
+    
+    my $is_eof = Sys::IO->feof($file_stream);
+    
+    return $is_eof;
+  }
+  
+  method error : int () {
+    
+    my $file_stream = $self->{FileStream};
+    
+    my $is_error = Sys::IO->ferror($file_stream);
+    
+    return $is_error;
+  }
+  
+  method clearerr : void () {
+    
+    my $file_stream = $self->{FileStream};
+    
+    Sys::IO->clearerr($file_stream);
+  }
+  
+  method flush : void () {
+    
+    my $file_stream = $self->{FileStream};
+    
+    Sys::IO->fflush($file_stream);
+  }
+  
+  method ungetc : int ($c : int) {
+    
+    my $file_stream = $self->{FileStream};
+    
+    my $c_pushed = Sys::IO->ungetc($c, $file_stream);
+    
+    return $c_pushed;
+  }
+  
+  method sync : void () {
+    my $fd = $self->{FD};
+    
+    Sys::IO->fsync($fd);
+  }
+  
+  method truncate : void ($legnth : long) {
+    my $fd = $self->{FD};
+    
+    Sys::IO->ftruncate($fd, $legnth);
+  }
+  
+  private method open : void ($file_name : string, $open_mode : object of string|Int, $perm : int = -1) {
     
     my $file_stream_ref = [(Sys::IO::FileStream)undef];
     
@@ -76,149 +225,13 @@ class IO::File extends IO::Handle {
     $self->{FileStream} = $file_stream_ref->[0];
   }
   
-  method fdopen : void ($fd : int, $open_mode : string) {
+  private method fdopen : void ($fd : int, $open_mode : string) {
     
     my $file_stream_ref = [(Sys::IO::FileStream)undef];
     
     Sys->fdopen($file_stream_ref, $open_mode, $fd);
     
     $self->{FileStream} = $file_stream_ref->[0];
-  }
-  
-  # Instance methods
-  method getline : string () {
-    my $file_stream = $self->{FileStream};
-    my $line = Sys->readline($file_stream);
-    
-    $self->{InputLineNumber}++;
-    
-    return $line;
-  }
-  
-  method getlines : string () {
-    
-    my $file_stream = $self->{FileStream};
-    
-    my $string_buffer = StringBuffer->new;
-    while (1) {
-      my $line = Sys->readline($file_stream);
-      if ($line) {
-        $string_buffer->push($line);
-      }
-      else {
-        last;
-      }
-    }
-    
-    my $lines_string = $string_buffer->to_string;
-    
-    return $lines_string;
-  }
-  
-  method close : void () {
-    
-    my $file_stream = $self->{FileStream};
-    
-    Sys::IO->fclose($file_stream);
-    
-    $self->{FileStream} = undef;
-  }
-  
-  method fileno : int () {
-    my $file_stream = $self->{FileStream};
-    my $fd = Sys->fileno($file_stream);
-    return $fd;
-  }
-  
-  method getc : int () {
-    my $file_stream = $self->{FileStream};
-    my $char = Sys->getc($file_stream);
-    return $char;
-  }
-  
-  method printflush : void ($string : string) {
-    my $old_autoflush = $self->autoflush;
-    
-    # Restores the autoflush field at the end of the scope.
-    my $scope_guard = Scope::Guard->new([has handle : IO::Handle = $self, has old_autoflush : int = $old_autoflush] method : void () {
-      my $handle = $self->{handle};
-      my $old_autoflush = $self->{old_autoflush};
-      
-      $handle->set_autoflush($old_autoflush);
-    });
-    
-    $self->set_autoflush(1);
-    $self->print($string);
-  }
-  
-  method clearerr : void () {
-    
-    my $file_stream = $self->{FileStream};
-    
-    Sys::IO->clearerr($file_stream);
-  }
-  
-  method eof : int () {
-    my $file_stream = $self->{FileStream};
-    my $is_eof = Sys::IO->feof($file_stream);
-    
-    return $is_eof;
-  }
-  
-  method error : int () {
-    my $file_stream = $self->{FileStream};
-    
-    my $is_error = Sys::IO->ferror($file_stream);
-    
-    return $is_error;
-  }
-  
-  method flush : void () {
-    my $file_stream = $self->{FileStream};
-    
-    Sys::IO->fflush($file_stream);
-  }
-  
-  method ungetc : int ($c : int) {
-    my $file_stream = $self->{FileStream};
-    
-    my $c_pushed = Sys::IO->ungetc($c, $file_stream);
-    
-    return $c_pushed;
-  }
-  
-  method write : int ($string : string, $length : int = -1, $offset : int = 0) {
-    
-    my $file_stream = $self->{FileStream};
-    
-    if ($length < 0) {
-      $length = length $string;
-    }
-    
-    my $write_length = Sys::IO->fwrite($string, 1, $length, $file_stream);
-    
-    return $write_length;
-  }
-  
-  method read : int ($string : mutable string, $length : int = -1, $offset : int = 0) {
-    
-    my $file_stream = $self->{FileStream};
-    
-    my $read_length = Sys->read($file_stream, $string, $length, $offset);
-    
-    return $read_length;
-  }
-  
-  method sync : void () {
-    my $fd = $self->{FD};
-    
-    Sys::IO->fsync($fd);
-  }
-  
-  method truncate : void ($legnth : long) {
-    my $fd = $self->{FD};
-    
-    Sys::IO->ftruncate($fd, $legnth);
   }
   
 }
